# submariner

./: .gitignore  README.md  commands.py  env.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
.idx/: dev.nix
customtypes/: crashcourse.py
interfaces/: commands.py  module.py
src/submarine/: main.py  test.py
src/submarine/interfaces/: commands.py  module.py  pypi.py  virtualenv.py
src/submariner/: checks.py  env.py  main.py
src/submariner/customtypes/: response.py
src/submariner/interfaces/: module.py  virtualenv.py
