[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subsub"
version = "0.1"
description = 'A tool to explore python modules'
readme = "README.md"
requires-python = ">=3.8"
license = 'MIT'
keywords = []
authors = [
  { name = "stormzzy900", email = "stormzzy900@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["typer", "dotenv", "rich", "genkit", "genkit-plugin-google-genai"]

[project.scripts]
submarine = "subsub.main:main"

[project.urls]
Documentation = "https://github.com/stormzzy900/subsub#readme"
Issues = "https://github.com/stormzzy900/subsub/issues"
Source = "https://github.com/stormzzy900/subsub"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/subsub tests}"

[tool.coverage.run]
source_pkgs = ["subsub", "tests"]
branch = true
parallel = true
omit = [
  "src/subsub/__about__.py",
]

[tool.coverage.paths]
subsub = ["src/subsub", "*/describe/src/subsub"]
tests = ["tests", "*/subsub/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
